Mainly line-spacing issues
Also commented and re-organized a bit.

--- a/clean_para_numbering.css
+++ b/clean_para_numbering.css
@@ -1,5 +1,65 @@
-body{	background-color: #F5F5F5;	font-family: "Georgia","Baskerville","Times","Times New Roman","Serif";	font-size: 13pt;	line-height: 110%;	color: black;	width: 600pt;	clear: both;	margin-left: auto;	margin-right: auto;	padding: 0pt 75pt 50pt 75pt;
-	counter-reset: section;}H1, H2, H3, H4, H5, H6, .small_heading, .right_heading, table{	font-family: "Gill Sans","Helvetica","sans-serif";	clear: both;}H1{	font-size: 24pt;	font-weight: lighter;	font-variant: small-caps;	letter-spacing: .07em;}H2{	font-size: 18pt;	font-weight: normal;	line-height: 50%;}H3{	font-size: 15pt;	font-weight: normal;	border-top: 2px solid gray;	margin-top: 20pt;	padding-top: 8pt;}H4{	font-size: 13pt;	font-weight: normal;	margin-top: 0pt;}H5{	font-size: 10pt;	font-weight: bold;}H6{	font-size: 9pt;	font-weight: normal;
+/* The overall appearance generated by this css is based on                */
+/* Matthew Butterick’s Practical Typography http://practicaltypography.com */
+/* He is of course not to blame for any infelicities introduced by me.     */
+/* Last updated 2015-06-10                                                 */
+
+/* The basic look */
+
+body {
+	background-color: #F5F5F5;
+	font-family: "Georgia","Baskerville","Times","Times New Roman","Serif";
+	font-size: 13pt;
+	line-height: 140%;
+	color: black;
+	width: 600pt;
+	clear: both;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0pt 75pt 50pt 75pt;
+	counter-reset: section;
+}
+
+/* Defining the headers */
+
+H1, H2, H3, H4, H5, H6, .small_heading, .right_heading, table {
+	font-family: "Gill Sans","Helvetica","sans-serif";
+	clear: both;
+}
+
+H1 {
+	font-size: 24pt;
+	font-weight: lighter;
+	font-variant: small-caps;
+	letter-spacing: .07em;
+}
+
+H2 {
+	font-size: 18pt;
+	font-weight: normal;
+	line-height: 50%;
+}
+
+H3 {
+	font-size: 15pt;
+	font-weight: normal;
+}
+
+H4 {
+	font-size: 13pt;
+	font-weight: normal;
+	margin-top: 0pt;
+}
+
+H5 {
+	font-size: 10pt;
+	font-weight: bold;
+}
+
+/* h6 is going to be used for paragraph numbering via Pandoc */
+
+H6 {
+	font-size: 9pt;
+	font-weight: normal;
 	font-style: normal;
 	color: gray;
 	left: -5em;
@@ -10,16 +70,144 @@ body{	background-color: #F5F5F5;	font-family: "Georgia","Baskerville","Times"
 	width: 0;
 	margin-top: 0;
 }
-	
-h6::before 
-{
-  counter-increment: section;               /* Increment the section counter*/
-  content: counter(section); /* Display the counter */
-}table {	width: 100%;	font-weight: lighter;}th{	background: red;	display: none;}p ~ table{	margin-top: 2em;	border-top: 2px solid gray;}img{	float: right;	width: 150px;	height: auto;	border: 1pt solid;	top: 50pt;	position: relative;}/*	display: inline-block;	position: relative;	top: 75pt;*/ul{	line-height: 110%;	list-style-type: disc;	padding: 0pt 0pt 0pt 150pt;}p + ul{	margin-top: -5pt;}A{	background: transparent;	border-bottom: thin dotted;	text-decoration: none;	color: inherit;}A:visited { }A:hover{	background-color: #333;	color: #E6E6E6;}*.small_heading{	font-size: 12pt;	float: left;	padding-bottom: 5pt;}.right_heading{	text-align: right;	font-size: 12pt;	clear: none;	vertical-align: bottom;	padding-bottom: 15pt;	display: inline-block;	float: right;}.item{	padding-left: 125pt;	position: relative;	clear: both;	display: block;	margin-bottom: 7pt;	color: black;}.item .date{	position: absolute;	top: 0;	left: 12pt;	right: 480pt;}*.item_standalone{	display: inline-block;	line-height: 110%;	text-align: left;	padding-left: 12pt;	margin-bottom: 7pt;}.footer{	border-top: 2px solid gray;	margin-top: 25pt;	text-align: center;	color: red;}
 
-.footnoteRef
-{
-	height: 0;
+h6::before {
+	/* Increment the section counter*/
+	counter-increment: section;
+	/* Display the counter */
+	content: counter(section);
 }
 
-hr{	height: 2px;	background-color: gray;	text-align: center;	border: none;}
+/* Reduce the font size just a bit on block quotes. */
+
+blockquote {
+	font-size: 90%;
+}
+
+/* Give the bilbio section a rule like the notes have. */
+
+#bibliography {
+	border-top: 2px solid gray;
+	padding-top: 1em;
+}
+
+hr {
+	height: 2px;
+	background-color: gray;
+	border: none;
+}
+
+/* Special formatting for the meta-data at the start of the document, from pandoc. */
+
+.title, .author, .date {
+	text-align: center;
+	font-weight: lighter;
+}
+
+/* To eliminate the extra line spacing in normal sup formatting. */
+
+sup {
+	vertical-align: top;
+	font-size: 75%;
+	line-height: 50%;
+}
+
+table {
+	width: 100%;
+	font-weight: lighter;
+}
+
+th {
+	display: none;
+}
+
+p ~ table {
+	margin-top: 2em;
+	border-top: 2px solid gray;
+}
+
+img {
+	float: right;
+	width: 150px;
+	height: auto;
+	border: 1pt solid;
+	top: 50pt;
+	position: relative;
+}
+
+ul {
+	line-height: 110%;
+	list-style-type: disc;
+	padding: 0pt 0pt 0pt 150pt;
+}
+
+p + ul {
+	margin-top: -5pt;
+}
+
+/* Visible but subtle formatting of links */
+
+A {
+	background: transparent;
+	border-bottom: thin dotted;
+	text-decoration: none;
+	color: inherit;
+}
+
+A:visited {
+	
+}
+
+A:hover {
+	background-color: #333;
+	color: #E6E6E6;
+}
+
+/* Stuff from here down is left-over from my CV css. */
+
+*.small_heading {
+	font-size: 12pt;
+	float: left;
+	padding-bottom: 5pt;
+}
+
+.right_heading {
+	text-align: right;
+	font-size: 12pt;
+	clear: none;
+	vertical-align: bottom;
+	padding-bottom: 15pt;
+	display: inline-block;
+	float: right;
+}
+
+.item {
+	padding-left: 125pt;
+	position: relative;
+	clear: both;
+	display: block;
+	margin-bottom: 7pt;
+	color: black;
+}
+
+.item .date {
+	position: absolute;
+	top: 0;
+	left: 12pt;
+	right: 480pt;
+}
+
+*.item_standalone {
+	display: inline-block;
+	line-height: 110%;
+	text-align: left;
+	padding-left: 12pt;
+	margin-bottom: 7pt;
+}
+
+.footer {
+	border-top: 2px solid gray;
+	margin-top: 25pt;
+	text-align: center;
+	color: red;
+}
